--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.LoginActivity" />
+        <activity
+            android:theme="@style/AppTheme.Dark"
+            android:name=".activities.LoginActivity" />
     </application>
 
 </manifest>
