--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity
             android:theme="@style/AppTheme.Dark"
             android:name=".activities.LoginActivity" />
+        <activity android:name=".activities.SingupActivity"/>
     </application>
 
 </manifest>
