--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.0"
     defaultConfig {
         applicationId "br.com.versalius.akijob"
-        minSdkVersion 11
+        minSdkVersion 13
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -27,6 +27,10 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.android.support:design:25.0.1'
     compile 'com.android.volley:volley:1.0.0'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'com.afollestad.material-dialogs:core:0.9.2.1'
+    compile 'com.edmodo:cropper:1.0.1'
     compile files('libs/gson-2.8.0.jar')
     testCompile 'junit:junit:4.12'
 }
