--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.com.versalius.akijob">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.MANAGE_DOCUMENTS" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -22,9 +24,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:theme="@style/AppTheme.Dark"
-            android:name=".activities.LoginActivity" />
-        <activity android:name=".activities.SingupActivity"/>
+            android:name=".activities.LoginActivity"
+            android:theme="@style/AppTheme.Dark" />
+        <activity android:name=".activities.SingupActivity" />
+        <activity android:name=".activities.CropActivity"
+            android:label="@string/title_crop_activity"/>
     </application>
 
 </manifest>
